# lhcii_model

./: .gitignore  LICENSE.txt  README.md  lhcII_model.ipynb  main.py  notes.txt  play.ipynb  requirements.txt  requirements_conda.txt  requirements_dev.txt  run_overlapagent.py  setup.cfg
src/grana_model/: attractionhandler.py  collisionhandler.py  collisionobserver.py  dcalibrator.py  densityhandler.py  diffusionhandler.py  granamodel.py  image_coordinates_subshape.py  lhcii_ensemble.py  objectdata.py  overlapagent.py  particle.py  psiistructure.py  scale_test.py  scoreboard.py  simulationenv.py  simulationtimer.py  simulationwindow.py  spawner.py  spritehandler.py
src/grana_model/res/scale_sprites/: C2S2M2.xcf
src/grana_model/res/shapes/: C1.pickle  C1_simple.pickle  C2.pickle  C2S2.pickle  C2S2M.pickle  C2S2M2.pickle  C2S2M2_simple.pickle  C2S2M_simple.pickle  C2S2_simple.pickle  C2_simple.pickle  LHCII_midComplex.pickle  LHCII_monomer.pickle  LHCII_monomer_simple.pickle  LHCII_old.pickle  LHCII_simple.pickle  LHCII_verycomplex.pickle  LHCII_veryveryComplex_171.pickle
tests/: test_objectdata.py  test_overlapagent.py  test_spawner.py
