[metadata]
name = grana_model
version = 0.0.1
author = Magnus Wood
author_email = woodmagnus@gmail.com
description = A model of a grana
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fieryWalrus1002/grana_model
project_urls =
    Bug Tracker = https://github.com/fieryWalrus1002/grana_model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src